3 - 10 -- creat the save quiz handler

--- a/src/style/scss/global/_drop-pages.scss
+++ b/src/style/scss/global/_drop-pages.scss
@@ -70,6 +70,8 @@
   width: 80%;
   max-width: 600px;
   transition: 0.5s;
+  max-height: 80vh;
+  overflow-y: scroll;
   & > .title {
     color: $primery;
     font-weight: bold;
